--- a/Login.html
+++ b/Login.html
@@ -11,7 +11,15 @@
       <div class="part">
         <h1>Login</h1>
         <p>Get access to your Orders, Wishlist and Recommendations</p>
-        <img src="./images/Screenshot 2023-08-13 141030.png" alt="" />
+        <!-- <img src="./Screenshot 2023-09-10 180324.png" alt="" /> -->
+        <!-- <img
+          src="url(//static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/login_img_c4a81e.png)"
+        /> -->
+        <img
+          width="100px"
+          height="50px"
+          src="https://static-assets-web.flixcart.com/fk-p-linchpin-web/fk-cp-zion/img/login_img_c4a81e.png"
+        />
       </div>
       <div class="part2">
         <input
